# cpp-practice

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/functions/: CMakeLists.txt  README.md  lambda.cpp  lambda.h
src/logic-questions/: CMakeLists.txt  country-scanner.cpp  country-scanner.h
src/maths/: CMakeLists.txt
src/memory/: CMakeLists.txt
src/multi-threading/: CMakeLists.txt
src/objects/: CMakeLists.txt  const-class.h  init-methods.h  rule-of-five.h  rule-of-three.h
src/stl/: CMakeLists.txt
test/: CMakeLists.txt  main.cpp
test_package/: conanfile.py
